# ss-win-diskutil

./: .gitignore  CMakeLists.txt  LICENSE  NEWS.md  README.md  build_cmake.sh  clean_cmake.sh  list_drives.vc10.sln  prepare_cmake.sh  remove_cmake_artefacts.sh  run_all_examples.sh  run_all_scratch_tests.sh  run_all_unit_tests.sh  ss-win-diskutil.vc10.sln  ss-win-diskutil.vc14.sln
examples/: CMakeLists.txt
examples/list_volumes/: CMakeLists.txt  entry.c  implicit_link.c
examples/list_volumes/vc10/: list_volumes.vcxproj
examples/list_volumes/vc14/: list_volumes.vcxproj  list_volumes.vcxproj.filters
include/: ss-win-diskutil.h
include/ss-win-diskutil/: implicit_link.h  version.h  volumes.h
projects/core/vc10/: ss-win-diskutil.core.vc10.vcxproj  ss-win-diskutil.core.vc10.vcxproj.filters  ss-win-diskutil.core.vcxproj
projects/core/vc14/: ss-win-diskutil.core.vcxproj  ss-win-diskutil.core.vcxproj.filters
projects/scripts/: copy_lib.cmd
projects/support/clcp/: clcp.c  clcp.vcxproj  clcp.vcxproj.filters
projects/support/clcp/vc10/: clcp.vcxproj  clcp.vcxproj.filters
projects/support/clcp/vc14/: clcp.vcxproj
projects/vcprops/: ss-win-diskutil.common.props
src/: CMakeLists.txt  win.volumes.c
test/: CMakeLists.txt
test/scratch/: CMakeLists.txt
test/scratch/list_drives/: CMakeLists.txt  diagnostics.cpp  entry.cpp  implicit_link.cpp
test/scratch/list_drives/_dev_pragmatics_/: warnings.msvc.10+.h
test/scratch/list_drives/vc10/: list_drives.vcxproj  list_drives.vcxproj.filters
test/scratch/list_drives/vc14/: list_drives.vcxproj
